Store access token in env file

--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "fetch-blob": "^3.1.3",
     "form-data": "^4.0.0",
-    "formdata-polyfill": "^4.0.10",
-    "formidable": "^2.0.1",
     "node-fetch": "^3.1.0"
   },
   "devDependencies": {
